# oopfsc

./: README.md
01/ex1/: main.c  solution.txt
01/ex2/: matrix_broken.cc  matrix_broken.h  solution.txt  testmatrix  testmatrix.cc
02/: feedback.md
02/ex1/: main.cc  rationalNumber.cpp  rationalNumber.h  solution.txt  x.out
02/ex1/x.out.dSYM/Contents/: Info.plist
02/ex1/x.out.dSYM/Contents/Resources/DWARF/: x.out
02/ex2/: a.out  main.cc  rationalNumber.cpp  rationalNumber.h  solution.txt
03/: feedback.md
03/ex1/: a.out  solution.txt  test.cc
03/ex2/: solution.txt
03/ex3/: a.out  solution.txt  test.cpp
03/ex4/: a.out  linked_list.cpp  main.cc  solution.txt
04/: feedback.md
04/ex1/: a.out  ll.cpp  ll.h  main.cc  solution.txt  supp.txt
04/ex2/: a.out  ll.cpp  ll.h  main.cc  solution.txt
04/ex3/: bar.cpp  foo.cpp  solution.txt
04/ex4/: main.cc
05/: feedback.md
05/ex1/: main.cc  solution.txt
05/ex2/: a.out  main.cc  main2.cc  solution.txt  test.cc  vector1.cpp  vector2.cpp
05/ex3/: main.cc  solution.txt
06/: feedback.md
06/01/: main.cc  solution.txt
06/02/: main.cc  solution.txt  vector2.cpp
06/03/: main.cc  solution.txt
07/ex1/: CMakeLists.txt  composite_quadrature_rule.cc  composite_quadrature_rule.h  composite_sine.cc  composite_sine.h  functor.h  main.cc  polynomial.cc  polynomial.h  quadrature_rule.h  simpson_rule.cc  simpson_rule.h  test_function.h  trapezoidal_rule.cc  trapezoidal_rule.h
07/ex2/: CMakeLists.txt  adaptative_composite_quadrature_rule.cc  adaptative_composite_quadrature_rule.h  main.cc
07/scratch/: integration.cc  midpoint.h  midpoint_class.h  test_class.h
08/: matrix.h  rational.cc  rational.h  test_matrix.cc
09/: feedback.md
09/ex1/: CMakeLists.txt  main.cc  run.sh  test_dynamic_dynamic.cc  test_dynamic_dynamic.hh  test_quadrature.hh  test_static_dynamic.cc  test_static_dynamic.hh  test_static_static.cc  test_static_static.hh
09/ex1/static/: adaptative_composite_quadrature_rule.h  composite_quadrature_rule.h  composite_sine.cc  composite_sine.h  functor.h  polynomial.cc  polynomial.h  quadrature_rule.h  simpson_rule.h  test_function.h  trapezoidal_rule.h
10/: feedback.md
10/ex1/: quicksort.cpp  solution.txt
10/ex2/: matrix.cc  matrix.h  testmatrix.cc
advanced_c/: Inheritance.cc  castings.cc  ch6_bookclub.cc  const.cc  lvalue&rvalue.cc  nameLookup.cc  new&delete.cc  session1-8.cc  session9-11.cc  staticPolymorphism.cc  struct_class.cc  templates.cc
advanced_c/Initialization_Fiasco/: .Cat.h.swp  Cat.cpp  Cat.h  Dog.cpp  Dog.h  Global.cpp  Global.h  Makefile  main.cc
stl/: STL_intro.cc  algorithm_sorted_data.cc  algorithms_nonmodify.cc  alrogrithm_modify.cc  equal_equivalence.cc  memFun_vs_algorithm.cc  modify.cc  removal.cc  reverse_itr.cc  slice.cc  sortings.cc  vector_deque.cc
